Adding analytics from tiktok as well as hashtag search

--- a/core/templates/core/influencer_dashboard.html
+++ b/core/templates/core/influencer_dashboard.html
@@ -38,6 +38,12 @@
             Unlock Premium Resources
         </a>
 
+        <a href="{% url 'influencer-analytics' %}" class="btn brand-button-copper">
+          <img src="{% static 'images/icon_star.png' %}" alt="Analytics" style="width: 20px; margin-right: 6px;">
+          View My Analytics
+        </a>
+
+
     </div>
 </div>
 {% endblock %}
